    * New script trigger for when you close a menu. [James]
    * "set npc ignores walls", "get npc ignores walls",
      "set npc obstructs", "get npc obstructs", "set npc usable",
      "get npc usable", "set npc moves", "get npc moves" [Ralph]
    * "init mouse" no longer locks the mouse to the window
    * "read zone", "write zone", "zone at spot",
      "zone number of tiles" [Ralph]
    * "use item", "use item in slot" [James]
    * "map width" and "map height" now take an optional argument,
      the map number [Ralph]
    * "mouse click"; you can test the middle mouse button now [Ralph]
    * "extended scancodes enabled" [Ralph]
    * Resolution of "get/set music volume" increased [Ralph]
    * "get level cap", "set level cap" [Ralph]
    * "load backdrop sprite", "replace backdrop sprite",
      "set sprite trans", "get sprite trans" [Ralph]
    * "hero base elemental resist as int",
      "set hero base elemental resist",
      "hero total elemental resist as int" [Ralph]

  * Vikings of Midgard

  * Stuff Only Developers Will Notice
    * Test suite and benchmarks for RELOAD format [Mike]
    * Comprehensive SCons-based build system, to replace all the others
      [David Gowers]
    * Generic resizable arrays ('vector's) to replace FreeBASIC's
      horrible builtin arrays. This is why you should not rush
      programming language features :) [Ralph]

Nov 8 2010 [Ypsiliform+3]

  * Bugfixes
    * Bug 816: Freeze on attack instead-chaining on multi-stage chains
    * The "leader" command has never worked.
    * "set dead heroes gain experience" did nothing.
    * Bug 829: Shrinking a map could cause garbage map layers to appear;
      also, deleting map layers did not work
    * Script string literals were broken when playing games made in
      late 2006.
    * Bug 824: Back-compat issue with Curse of Vampire (affected other
      games) [James]
    * Cancel hero movement if hero speed is zero. Prevents a situation